--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ footer{padding:2rem 6rem;display:flex;justify-content:space-between;font-size:.7
       <h2 class="section-title">Prefer to hear it<br/>from me directly?</h2>
       <p>Watch a short intro about me.</p>
     </div>
-    <video class="video-frame" controls>
+    <video class="video-frame" controls style="width:100%; height:100%; object-fit:cover;">
       <source src="intro.mp4" type="video/mp4">
     </video>
   </div>
